- Refactor: Removes unused create method that does not receive a description in AccessControlProfile [#qubIT-Omnis-7974]

2.4.2 (10-12-2024)
- Refactor: Removes code related to AccessControlProfile's deprecated locked attribute [#qubIT-Omnis-6993]
- Refactor: Makes AccessControlProfile's system attribute required in the DML [#qubIT-Omnis-7160] 

2.4.1 (28-10-2024)
- Refactor: Makes isRestricted and isAutoGenerated methods in AccessControlPermission return boolean [#qubIT-Omnis-7088]
- Bug fix: Ensures NPEs are not thrown in isRestricted method in AccessControlProfile [#qubIT-Omnis-7116]

2.4.0 (17-10-2024)
- New feature: Adds description field to AccessControlPermission and AccessControlProfile entities [#qubIT-Omnis-6987]

2.3.0 (09-10-2024)
- Refactor: Adds system field to AccessControlProfile entity and marks the locked field's getters and setters as deprecated [#qubIT-Omnis-6980]

2.2.0 (07-10-2024)
- Refactor: Removes locked field from AccessControlPermission entity [#qubIT-Omnis-6964]

2.1.1 (02-09-2024)
- Improvement: Upgrades parent [#qubIT-Omnis-6687]

2.1.0 (02-09-2024)
- Improvement: Ensures Release Notes is in the jar [#qubIT-Omnis-6579]
- Improvement: Updates guava from 21.0 to 33.2.1-jre [#qubIT-Omnis-5869]

2.0.0 (17-06-2024)
- Improvement: Updates foundation core api version to 7.0.0 [#qubIT-Omnis-4737]

1.9.0 (27-01-2023)
- Improvement: Implementing access control interfaces of OMNIS.cloud platform

1.8.2 (19-03-2021)
- Bug fix: Fixed update object cache when changing class or provider strategy

1.8.1 (22-02-2021)
- Bug fix: Fixed update object cache when profile is deleted

1.8.0 (22-02-2021)
- New feature: Added object-profile cache to improve performance

1.7.1 (15-02-2021)
- Bug fix: Fixed bug in contains object
- Bug fix: Fixing SpotBugs issue (SE_BAD_FIELD)

1.7.0 (11-02-2021)
- Improvement: Improved check if profile contains object due to performance issues
- Improvement: Added soft reference to access control profile parsed objects
