@@ -28,7 +28,6 @@ import com.qubit.terra.framework.services.accessControl.Profile;
 import com.qubit.terra.framework.services.context.ApplicationUser;
 import com.qubit.terra.framework.services.versioning.VersioningInformationReader;
 import com.qubit.terra.framework.tools.primitives.LocalizedString;
-import com.qubit.terra.qubAccessControl.services.ObjectProfileCacheService;
 import com.qubit.terra.qubAccessControl.servlet.AccessControlBundle;
 
 import pt.ist.fenixframework.Atomic;
@@ -65,7 +64,6 @@ public class AccessControlProfile extends AccessControlProfile_Base implements P
         setRestricted(restricted);
         setSystem(system);
         setObjectsClass(objectsClass);
-        setObjectsProviderStrategy(objectsProviderStrategy);
         checkRules();
         PROFILE_CACHE.put(code, Optional.of(this));
     }
@@ -82,7 +80,6 @@ public class AccessControlProfile extends AccessControlProfile_Base implements P
         setRestricted(restricted);
         setSystem(system);
         setObjectsClass(objectsClass);
-        setObjectsProviderStrategy(objectsProviderStrategy);
         checkRules();
         PROFILE_CACHE.put(getCode(), Optional.of(this));
     }
@@ -209,9 +206,9 @@ public class AccessControlProfile extends AccessControlProfile_Base implements P
         Set<T> nonMatchingClassObjects =
                 objects.parallelStream().filter(o -> !providerClass.isAssignableFrom(o.getClass())).collect(Collectors.toSet());
         if (nonMatchingClassObjects.isEmpty()) {
-            Set<T> finalObjects = provideObjects();
+            Set<Object> finalObjects = provideObjects();
             finalObjects.addAll(objects);
-            setObjects(finalObjects);
+            setObjects(finalObjects.stream().map(o -> (DomainObject) o).collect(Collectors.toSet()));
             objects.forEach(object -> ObjectProfilesCache.addToCache(object, this));
         } else {
             throw new IllegalArgumentException("Expected to receive collection of objects of type " + providerClass.getName());
@@ -233,9 +230,9 @@ public class AccessControlProfile extends AccessControlProfile_Base implements P
             throw new IllegalStateException("No object class defined");
         }
         if (providerClass.isAssignableFrom(object.getClass())) {
-            Set<T> objects = provideObjects();
+            Set<Object> objects = provideObjects();
             objects.add(object);
-            setObjects(objects);
+            setObjects(objects.stream().map(o -> (DomainObject) o).collect(Collectors.toSet()));
             ObjectProfilesCache.addToCache(object, this);
         } else {
             throw new IllegalArgumentException("Expected to receive object of type " + providerClass.getName()
@@ -251,9 +248,9 @@ public class AccessControlProfile extends AccessControlProfile_Base implements P
         Set<T> nonMatchingClassObjects =
                 objects.parallelStream().filter(o -> !providerClass.isAssignableFrom(o.getClass())).collect(Collectors.toSet());
         if (nonMatchingClassObjects.isEmpty()) {
-            Set<T> finalObjects = provideObjects();
+            Set<Object> finalObjects = provideObjects();
             finalObjects.removeAll(objects);
-            setObjects(finalObjects);
+            setObjects(finalObjects.stream().map(o -> (DomainObject) o).collect(Collectors.toSet()));
             objects.forEach(object -> ObjectProfilesCache.removeFromCache(object, this));
         } else {
             throw new IllegalArgumentException("Expected to receive collection of objects of type " + providerClass.getName());
@@ -276,9 +273,9 @@ public class AccessControlProfile extends AccessControlProfile_Base implements P
             throw new IllegalStateException("No object class defined");
         }
         if (providerClass.isAssignableFrom(object.getClass())) {
-            Set<DomainObject> objects = provideObjects();
+            Set<Object> objects = provideObjects();
             objects.remove(object);
-            setObjects(objects);
+            setObjects(objects.stream().map(o -> (DomainObject) o).collect(Collectors.toSet()));
             ObjectProfilesCache.removeFromCache(object, this);
         } else {
             throw new IllegalArgumentException("Expected to receive object of type " + providerClass.getName()
@@ -291,17 +288,8 @@ public class AccessControlProfile extends AccessControlProfile_Base implements P
         throw new UnsupportedOperationException("Default method is disabled please use provideObjects().");
     }
 
-    protected ProviderStrategy getProvider() {
-        return ProviderStrategy.getProvider(getObjectsProviderStrategy());
-    }
-
     public <T extends DomainObject> Boolean containsObject(T object) {
-        if ("com.qubit.terra.qubAccessControl.domain.ProvideAssociatedStrategy".equals(getObjectsProviderStrategy())) {
-            return parseObjectsJSONToStringArray().contains(object.getExternalId());
-        } else {
-            ProviderStrategy provider = getProvider();
-            return provider != null ? provider.contains(this, object) : false;
-        }
+        return provideObjects().contains(object);
     }
 
     private Set<String> parseObjectsJSONToStringArray() {
@@ -322,22 +310,14 @@ public class AccessControlProfile extends AccessControlProfile_Base implements P
         return result;
     }
 
-    public <T extends Object> Set<T> provideObjects() {
-        ProviderStrategy provider = getProvider();
-        if (provider == null) {
-            return new HashSet<>();
-        }
-        return provider.provideAll(this);
-    }
-
-    protected <T extends DomainObject> Set<T> internalProvideObjects() {
-        Set<T> cacheResult = new HashSet<>();
-        Set<T> result = new HashSet<>();
+    public Set<Object> provideObjects() {
+        Set<DomainObject> cacheResult = new HashSet<>();
         Set<String> oidsToRemove = new HashSet<>();
+        Set<Object> result = new HashSet<>();
         try {
-            cacheResult.addAll((Collection<? extends T>) CACHE.get(this, () -> parseObjectsJSON()));
+            cacheResult.addAll((Collection<? extends DomainObject>) CACHE.get(this, () -> parseObjectsJSON()));
         } catch (ExecutionException e) {
-            return Collections.EMPTY_SET;
+            return Collections.emptySet();
         }
 
         // We are checking if the object is valid because we
@@ -490,41 +470,22 @@ public class AccessControlProfile extends AccessControlProfile_Base implements P
         addToObjectsCache();
     }
 
-    @Override
-    public void setObjectsProviderStrategy(String objectsProviderStrategy) {
-        removeFromObjectsCache();
-        super.setObjectsProviderStrategy(objectsProviderStrategy);
-        addToObjectsCache();
-    }
-
     public void removeFromObjectsCache() {
-        if (getProviderClass() == null || getObjectsProviderStrategy() == null) {
+        if (getProviderClass() == null) {
             return;
         }
 
-        if ("com.qubit.terra.qubAccessControl.domain.ProvideAssociatedStrategy".equals(getObjectsProviderStrategy())) {
-            Set<DomainObject> objects = provideObjects();
-            objects.forEach(object -> ObjectProfilesCache.removeFromCache(object, this));
-        } else {
-            ObjectProfilesCache.removeFromAllTypeOrSubtypeCache(getProviderClass(), this);
-            ObjectProfileCacheService.getAllSubClasses(getProviderClass())
-                    .forEach(clazz -> ObjectProfilesCache.removeFromAllTypeOrSubtypeCache(clazz, this));
-        }
+        provideObjects().stream().map(object -> (DomainObject) object)
+                .forEach(object -> ObjectProfilesCache.removeFromCache(object, this));
     }
 
     public void addToObjectsCache() {
-        if (getProviderClass() == null || getObjectsProviderStrategy() == null) {
+        if (getProviderClass() == null) {
             return;
         }
 
-        if ("com.qubit.terra.qubAccessControl.domain.ProvideAssociatedStrategy".equals(getObjectsProviderStrategy())) {
-            Set<DomainObject> objects = provideObjects();
-            objects.forEach(object -> ObjectProfilesCache.addToCache(object, this));
-        } else {
-            ObjectProfilesCache.addToAllTypeOrSubtypeCache(getProviderClass(), this);
-            ObjectProfileCacheService.getAllSubClasses(getProviderClass())
-                    .forEach(clazz -> ObjectProfilesCache.addToAllTypeOrSubtypeCache(clazz, this));
-        }
+        provideObjects().stream().map(object -> (DomainObject) object)
+                .forEach(object -> ObjectProfilesCache.addToCache(object, this));
     }
 
     @Override
