@@ -1,4 +1,8 @@
 - Refactor: Removes unused create method that does not receive a description in AccessControlProfile [#qubIT-Omnis-7974]
+- Refactor: Removes ObjectProviderStrategy field from AccessControlProfile entity [#qubIT-Omnis-7054]
+- Refactor: Makes ProviderStrategy abstract class deprecated [#qubIT-Omnis-8000]
+- Refactor: Removes ALL_OF_TYPE_OR_SUBTYPE_CACHE from ObjectProfilesCache class [#qubIT-Omnis-7914]
+- Refactor: Removes ObjectProfileCacheService [#qubIT-Omnis-7916]
 
 2.4.2 (10-12-2024)
 - Refactor: Removes code related to AccessControlProfile's deprecated locked attribute [#qubIT-Omnis-6993]
